$Id$
===============================================================

262	Luke Howard <lukeh@padl.com>

	* fix for BUG#370: nss_ldap fails to work on Solaris
	  without that patch applied

261	Luke Howard <lukeh@padl.com>

	* fix for Debian BUG#486778: ldap.conf template is
	  missing a comment in the first line

260	Luke Howard <lukeh@padl.com>

	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  only set errno for NSS_TRYAGAIN

259	Luke Howard <lukeh@padl.com>

	* fix for BUG#348: fix memory leak
	* fix for BUG#349: nss_ldap crashes after START_TLS timeout
	  (assertion failure in libldap)
	* fix for BUG#350: assertion failure in ldap_result (called
	  from do_result()) 
	* fix for BUG#351: double ldap_msgfree()

258	Luke Howard <lukeh@padl.com>

	* fix for BUG#343: nss_srv_domain should take a domain
	  not a record
	* fix for BUG#339: replacement code for Kerbeors
	  SASL operations
	* fix for BUG#338: nss_ldap constructs LDAP URIs
	  incorrectly
	* fix for BUG#337: configure fails to detect resolver
	  functions
	* fix for BUG#332: --enable-schema-mapping incorrectly
	  maps pw_change
	* fix for BUG#293: add nss_getgrent_skipmembers
	  parameter to ldap.conf, if enabled will not request
	  member attributes for group lookups, greatly increasing
	  performance for large groups
	* fix for BUG#272: nss_ldap's install target doesn't
	  always create the right solink for x86_64 glibc
	* fix for BUG#284: an error occurs during bulding with
	  cyrus-sasl2 when the compiler option 'as-needed' is used 

257	Luke Howard <lukeh@padl.com>

	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  block SIGPIPE in atfork handler

256	Luke Howard <lukeh@padl.com>

	* patch from Tomas Janousek <tjanouse@redhat.com>
	  to check for pthread_once(); __pthread_once does
	  not imply __pthread_atfork being non-NULL
	* fix for BUG#315: memory corruption/crash in
	  initgroups parsing

255	Luke Howard <lukeh@padl.com>

	* fix for BUG#303: SSL port behavior change since
	  version 241